--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <!-- Materialize -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<title>SIDO</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
-  <div id="wrapper" class="container row">
-    <div id="menu" class="col s9">
-      <div>
-          <div class="input-field inline">
-            <input id="email_inline" type="email" class="validate">
-            <label for="email_inline">FILTRO</label>
-          </div>
-      </div>
-      <div>
-        <div class="card">
-          <table>
-            <thead>
-              <tr>
-                 <th>Cuenta</th>
-                 <th>Mesa</th>
-                 <th>Cliente</th>
-                 <th>Mesero</th>
-                 <th>Total</th>
-             </tr>
-            </thead>
-
-            <tbody>
-             <tr>
-               <td>1</td>
-               <td>2</td>
-               <td>Juan</td>
-               <td>Jose</td>
-               <td>$20.40</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div id="botones" class="col s3 row valign-wrapper">
-      <div>
-        <a class="card btn-flat"><i class="large material-icons right">settings</i></a>
-        <a class="card waves-effect waves-teal btn-large">NUEVA</a>
-        <a class="card waves-effect waves-orange btn-large red lighten-1">AGREGAR</a>
-        <a class="card waves-effect waves-orange btn-large red lighten-1">MODIFICAR</a>
-        <a class="card waves-effect waves-orange btn-large red lighten-1">IMPRIMIR</a>
-        <a class="card waves-effect waves-orange btn-large red lighten-1">COBRAR</a>
-
-      </div>
-      </div>
+  <div id="app">
+    <v-app dark>
+      <v-container>
+        <h4>NEGOCIO X</h4>
+        <v-layout align-center justify-center row fill-height/>
+          <v-content>
+            <v-card style="height: 88vh; width: 95wh;">
+              <v-btn id="btnSettings" flat icon color="teal">
+                <v-icon dark>settings</v-icon>
+              </v-btn>
+              <v-container style="height:100%;">
+                <v-layout style="height:100%;">
+                  <v-flex xs10>
+                    <v-layout justify-center column fill-height>
+                        <v-card-title>Filtro:
+                          <v-spacer></v-spacer>
+                          <v-text-field v-model="search" append-icon="search"
+                          label="Search" single-line hide-details></v-text-field>
+                        </v-card-title>
+                        <v-data-table :headers="headers" :items="tableData" :search="search">
+                          <template v-slot:items="props">
+                            <td>{{props.item.cuenta}}</td>
+                            <td class="text-xs-right">{{props.item.mesa}}</td>
+                            <td class="text-xs-right">{{props.item.cliente}}</td>
+                            <td class="text-xs-right">{{props.item.mesero}}</td>
+                            <td class="text-xs-right">{{props.item.total}}</td>
+                          </template>
+                          <v-alert v-slot:no-results :value="true" color="error" icon="warning">
+                            Your search for "{{search}}" found no results.
+                          </v-alert>
+                    </v-layout>
+                  </v-flex>
+                  <v-flex xs2>
+                    <v-layout justify-center column fill-height>
+                      <v-btn color="green darken-4">NUEVA</v-btn>
+                      <v-btn color="light-green darken-4">AGREGAR</v-btn>
+                      <v-btn color="light-green darken-3">MODIFICAR</v-btn>
+                      <v-btn color="light-green darken-2">IMPRIMIR</v-btn>
+                      <v-btn color="light-green darken-1">COBRAR</v-btn>
+                    </v-layout>
+                  </v-flex>
+                </v-layout>
+              </v-container>
+            </v-card>
+          </v-content>
+        </v-layout>
+      </v-container>
+    </v-app>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
