se corrigieron colores del dashboard

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <v-layout align-center justify-center row fill-height/>
           <v-content>
             <v-card style="height: 88vh; width: 95wh;">
-              <v-btn id="btnSettings" flat icon color="teal">
+              <v-btn id="btnSettings" flat icon color="error">
                 <v-icon dark>settings</v-icon>
               </v-btn>
               <v-container style="height:100%;">
@@ -42,11 +42,11 @@
                   </v-flex>
                   <v-flex xs2>
                     <v-layout justify-center column fill-height>
-                      <v-btn color="green darken-4">NUEVA</v-btn>
-                      <v-btn color="light-green darken-4">AGREGAR</v-btn>
-                      <v-btn color="light-green darken-3">MODIFICAR</v-btn>
-                      <v-btn color="light-green darken-2">IMPRIMIR</v-btn>
-                      <v-btn color="light-green darken-1">COBRAR</v-btn>
+                      <v-btn color="success">NUEVA</v-btn>
+                      <v-btn color="error">AGREGAR</v-btn>
+                      <v-btn color="error">MODIFICAR</v-btn>
+                      <v-btn color="error">IMPRIMIR</v-btn>
+                      <v-btn color="error">COBRAR</v-btn>
                     </v-layout>
                   </v-flex>
                 </v-layout>
